i see light with geojson

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -104,13 +104,13 @@
       <br>
       {{archivedTrack.name}}
       <br>
-      Distance: {{oldDistance | number:'1.3' }} km
+      Distance: {{archivedDistance | number:'1.3' }} km
       <br>
-      Elevation gain: {{oldElevationGain | number:'1.0-0' }} m
+      Elevation gain: {{archivedElevationGain | number:'1.0-0' }} m
       <br>
-      Elevation loss: {{oldElevationLoss | number:'1.0-0' }} m
+      Elevation loss: {{archivedElevationLoss | number:'1.0-0' }} m
       <br>
-      Time: {{ oldTime }}
+      Time: {{ archivedTime }}
       <br>
       {{oldNumber}} points recorded
     </div>
