--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -38,20 +38,20 @@
     <div id = "card" class="card">
       CURRENT ROUTE
       <br>
-      Distance: {{currentDistance | number:'1.3' }} km
+      Distance: {{currentTrack.features[0].properties.currentDistance | number:'1.3' }} km
       <br>
-      Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
+      Elevation gain: {{currentTrack.features[0].properties.currentElevationGain | number:'1.0-0' }} m
       <br>
-      Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
+      Elevation loss: {{currentTrack.features[0].properties.currentElevationLoss | number:'1.0-0' }} m
       <br>
-      Time: {{ currentTime }}
+      Time: {{ currentTrack.features[0].properties.currentTime }}
       <br>
-      {{currentNumber}} points recorded
+      {{ currentTrack.features[0].properties.currentNumber}} points recorded
       <br>
       <br>
-      Current elevation: <ng-container *ngIf="currentAltitude !== undefined">{{currentAltitude | number:'1.0-0' }} m</ng-container>
+      Current elevation: <ng-container *ngIf="currentAltitude !== undefined">{{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</ng-container>
       <br>
-      Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
+      Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentNumber.currentSpeed | number:'1.1-1' }} km/h</ng-container>
       <br>
     </div>
     <div id = "card2" *ngIf="archivedTrack" class="card">
