--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -23,14 +23,22 @@ ion-fab-button {
     font-family: 'Arial, sans-serif';
     font-weight: bold;
     text-align: center;
-    margin-top: 75px;
   }
 
   .card {
     margin-left: 20px;
+    margin-top: 0px;
     font-size: 15px;
     font-family: 'Arial, sans-serif';
     font-weight: bold;
-    margin-top: 75px;
   }
   
+  .empty {
+    width: 100%;
+    height: 12vh;
+  }
+
+  .element {
+    width: 100%;
+    height: 60vh;
+  }
