--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -39,13 +39,13 @@
     <div class = element>
       <div class="card" *ngIf="currentTrack">
         CURRENT ROUTE<br>
-        Distance: {{currentTrack.features[0].properties.totaltDistance | number:'1.3' }} km<br>
+        Distance: {{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km<br>
         Elevation gain: {{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m<br>
         Elevation loss: {{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m<br>
         Time: {{ currentTrack.features[0].properties.totalTime }}<br>
         {{ currentTrack.features[0].properties.totalNumber}} points recorded<br><br>
         Current elevation: <ng-container *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">{{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</ng-container><br>
-        Current speed: <ng-container *ngIf="currentTrack.features[0].properties.currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentNumber.currentSpeed | number:'1.1-1' }} km/h</ng-container><br>
+        Current speed: <ng-container *ngIf="currentTrack.features[0].properties.currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h</ng-container><br>
       </div>
     </div>
     <div class = element>
