--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -52,13 +52,13 @@
       <div *ngIf="archivedTrack" class="card">
         ARCHIVED ROUTE<br>
         {{archivedTrack.features[0].properties.name}}<br>
-        Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== null">
+        Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
           {{archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km</ng-container><br>
-        Elevation gain: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationGain !== null">
+        Elevation gain: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationGain !== undefined">
           {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</ng-container><br>
-        Elevation loss: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationLoss !== null">
+        Elevation loss: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationLoss !== undefined">
           {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</ng-container><br>
-        Time: <ng-container *ngIf="archivedTrack.features[0].properties.totalTime !== null">
+        Time: <ng-container *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
           {{ archivedTrack.features[0].properties.totalTime }}</ng-container><br>
         {{ archivedTrack.features[0].properties.totalNumber}} points recorded<br>
       </div>  
