--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -43,9 +43,12 @@
         Elevation gain: {{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m<br>
         Elevation loss: {{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m<br>
         Time: {{ currentTrack.features[0].properties.totalTime }}<br>
+        In-motion time: {{ timeCorr }}<br> 
         {{ currentTrack.features[0].properties.totalNumber}} points recorded<br><br>
         Current elevation: <ng-container *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">{{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</ng-container><br>
         Current speed: <ng-container *ngIf="currentTrack.features[0].properties.currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h</ng-container><br>
+        Average speed: <ng-container *ngIf="currentAverageSpeed != undefined">{{currentAverageSpeed | number:'1.1-1'}} km/h</ng-container><br>
+        In-motion average speed: <ng-container *ngIf="currentAverageCorrSpeed != undefined">{{currentAverageCorrSpeed | number:'1.1-1'}} km/h</ng-container>
       </div>
     </div>
     <div class = element>
