--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,7 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
-@import "@tomtom-international/web-sdk-maps";
+// @import "@tomtom-international/web-sdk-maps";
 
 /** Ionic CSS Variables **/
 :root {
