--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,22 +7,22 @@
 
   <ion-fab slot="fixed" horizontal="center" vertical="top">
     <ion-row>
-      <ion-fab-button id='start' (click)="buttonClick('play')">
+      <ion-fab-button id='start' (click)="startTracking()">
         <ion-icon name="play"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='stop' (click)="buttonClick('stop')">
+      <ion-fab-button id='stop' (click)="stopTracking()">
         <ion-icon name="stop"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='save' (click)="buttonClick('save')">
+      <ion-fab-button id='save' (click)="setTrackDetails()">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='trash' (click)="buttonClick('trash')">
+      <ion-fab-button id='trash' (click)="removeTrack()">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='databutton' (click)="buttonClick('data')">
+      <ion-fab-button id='databutton' (click)="gotoData()">
         <ion-icon name="analytics-outline"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='mapbutton' (click)="buttonClick('map')">
+      <ion-fab-button id='mapbutton' (click)="gotoMap()">
         <ion-icon name="map-outline"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='list' (click)="buttonClick('list')">
