--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,10 +25,10 @@
       <ion-fab-button id='mapbutton' (click)="gotoMap()">
         <ion-icon name="map-outline"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='list' (click)="buttonClick('list')">
+      <ion-fab-button id='list' (click)="gotoPage('tab2')">
         <ion-icon name="list-outline"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='settings' (click)="buttonClick('settings')">
+      <ion-fab-button id='settings' (click)="gotoPage('tab3')">
         <ion-icon name="settings-outline"></ion-icon>
       </ion-fab-button>  
     </ion-row>
