--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -38,58 +38,54 @@
 
 <swiper-container id="data">
   <swiper-slide>
-    <div class = empty></div>  
-    <div class = element>
-      <div class="card" *ngIf="currentTrack">
-        CURRENT ROUTE<br>
-        Distance: {{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km<br>
-        Elevation gain: {{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m<br>
-        Elevation loss: {{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m<br>
-        Time: {{ currentTrack.features[0].properties.totalTime }}<br>
-        In-motion time: {{ timeCorr }}<br> 
-        {{ currentTrack.features[0].properties.totalNumber}} points recorded<br><br>
-        Current elevation: <ng-container *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">{{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</ng-container><br>
-        Current speed: <ng-container *ngIf="currentTrack.features[0].properties.currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h</ng-container><br>
-        Average speed: <ng-container *ngIf="currentAverageSpeed != undefined">{{currentAverageSpeed | number:'1.1-1'}} km/h</ng-container><br>
-        In-motion average speed: <ng-container *ngIf="currentAverageCorrSpeed != undefined">{{currentAverageCorrSpeed | number:'1.1-1'}} km/h</ng-container><br>
-        Correct way?  <ng-container *ngIf="onRouteColor != 'black'">{{onRouteColor}}</ng-container>
-      </div>
+    <div class = 'empty'></div>  
+    <div class = 'element card' *ngIf="currentTrack">
+      CURRENT ROUTE<br>
+      Distance: {{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km<br>
+      Elevation gain: {{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m<br>
+      Elevation loss: {{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m<br>
+      Time: {{ currentTrack.features[0].properties.totalTime }}<br>
+      In-motion time: {{ timeCorr }}<br> 
+      {{ currentTrack.features[0].properties.totalNumber}} points recorded<br><br>
+      Current elevation: <ng-container *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">{{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</ng-container><br>
+      Current speed: <ng-container *ngIf="currentTrack.features[0].properties.currentSpeed !== undefined">{{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h</ng-container><br>
+      Average speed: <ng-container *ngIf="currentAverageSpeed != undefined">{{currentAverageSpeed | number:'1.1-1'}} km/h</ng-container><br>
+      In-motion average speed: <ng-container *ngIf="currentAverageCorrSpeed != undefined">{{currentAverageCorrSpeed | number:'1.1-1'}} km/h</ng-container><br>
+      Correct way?  <ng-container *ngIf="onRouteColor != 'black'">{{onRouteColor}}</ng-container>
     </div>
-    <div class = element>
-      <div *ngIf="archivedTrack && archived == 'visible'" class="card">
-        ARCHIVED ROUTE<br>
-        {{archivedTrack.features[0].properties.name}}<br>
-        Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
-          {{archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km</ng-container><br>
-        Elevation gain: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationGain !== undefined">
-          {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</ng-container><br>
-        Elevation loss: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationLoss !== undefined">
-          {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</ng-container><br>
-        Time: <ng-container *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
-          {{ archivedTrack.features[0].properties.totalTime }}</ng-container><br>
-        {{ archivedTrack.features[0].properties.totalNumber}} points recorded<br>
-      </div>  
+    <div class = 'element card' *ngIf="archivedTrack">
+      ARCHIVED ROUTE<br>
+      {{archivedTrack.features[0].properties.name}}<br>
+      Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
+        {{archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km</ng-container><br>
+      Elevation gain: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationGain !== undefined">
+        {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</ng-container><br>
+      Elevation loss: <ng-container *ngIf="archivedTrack.features[0].properties.totalElevationLoss !== undefined">
+        {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</ng-container><br>
+      Time: <ng-container *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
+        {{ archivedTrack.features[0].properties.totalTime }}</ng-container><br>
+      {{ archivedTrack.features[0].properties.totalNumber}} points recorded<br>
     </div>  
   </swiper-slide>
   <swiper-slide>
-    <div class = empty></div>  
-    <div class = element>
-      <h1 *ngIf="currentTrack" class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+    <div class = 'empty'></div>  
+    <div class = 'element' id="cc0">
+      <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
       <canvas class = 'canvas' id="currentCanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     </div>
-    <div class = element>
-      <h1 *ngIf="archivedTrack && archived == 'visible'" class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+    <div class = 'element' id="ac0">
+      <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
       <canvas class = 'canvas' id="archivedCanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     </div>  
   </swiper-slide>  
   <swiper-slide>
-    <div class = empty></div>
-    <div class = element>  
-      <h1 *ngIf="currentTrack" class = 'title'>SPEED (km/h) vs time ({{currentUnit}})</h1>
+    <div class = 'empty'></div>
+    <div class = 'element' id="cc1">  
+      <h1 class = 'title'>SPEED (km/h) vs time ({{currentUnit}})</h1>
       <canvas class = 'canvas' id="currentCanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     </div>
-    <div class = element>  
-      <h1 *ngIf="archivedTrack && archived == 'visible'" class = 'title'>SPEED (km/h) vs time ({{archivedUnit}})</h1>
+    <div class = 'element' id="ac1">  
+      <h1 class = 'title'>SPEED (km/h) vs time ({{archivedUnit}})</h1>
       <canvas class = 'canvas' id="archivedCanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     </div>
   </swiper-slide> 
