--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,7 @@
       <ion-fab-button id='save' (click)="setTrackDetails()">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='trash' (click)="removeTrack()">
+      <ion-fab-button id='trash' (click)="confirmDeletion()">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='databutton' (click)="gotoData()">
@@ -53,7 +53,7 @@
       In-motion average speed: <ng-container *ngIf="currentAverageCorrSpeed != undefined">{{currentAverageCorrSpeed | number:'1.1-1'}} km/h</ng-container><br>
       Correct way?  <ng-container *ngIf="onRouteColor != 'black'">{{onRouteColor}}</ng-container>
     </div>
-    <div class = 'element card' *ngIf="archivedTrack">
+    <div class = 'element card' *ngIf="archivedTrack && archived == 'visible'">
       ARCHIVED ROUTE<br>
       {{archivedTrack.features[0].properties.name}}<br>
       Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
