--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,13 +10,13 @@
       <ion-fab-button id='start' (click)="startTracking()">
         <ion-icon name="play"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='stop' (click)="stopTracking()">
+      <ion-fab-button id='stop' (click)="confirm('Stop track', ' stop the track?', 'stop')">
         <ion-icon name="stop"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='save' (click)="setTrackDetails()">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='trash' (click)="confirmDeletion()">
+      <ion-fab-button id='trash' (click)="confirm('Delete track', ' permanently delete the track?', 'remove')">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='databutton' (click)="gotoData()">
