--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -53,7 +53,7 @@
       In-motion average speed: <ng-container *ngIf="currentMotionSpeed != undefined">{{currentMotionSpeed | number:'1.1-1'}} km/h</ng-container><br>
       Correct way?  <ng-container *ngIf="onRouteColor != 'black'">{{onRouteColor}}</ng-container>
     </div>
-    <div class = 'element card' *ngIf="archivedTrack && archivedVisible">
+    <div class = 'element card' *ngIf="archivedTrack && layerVisibility=='archived'">
       ARCHIVED ROUTE<br>
       {{archivedTrack.features[0].properties.name}}<br>
       Distance: <ng-container *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
