first version of sharing via email

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -69,7 +69,7 @@
   </swiper-slide>
   <swiper-slide>
     <div class = 'empty'></div>  
-    <div class = 'element' id="cc0">
+    <div class = 'element' id ='cc0'>
       <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
       <canvas class = 'canvas' id="currentCanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     </div>
