--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -69,7 +69,7 @@
           <div>DISPLAY<br>REFERENCE</div>
         </ion-button>
         <ion-button *ngIf="(numChecked != 1)" [ngClass]="(layerVisibility != 'archived') ? 'redDisabled' : 'redEnabled'" (click)="displayTrack(false)"
-          expand="block" [disabled]="layerVisibility != 'archived'">
+          expand="block" [disabled]="(layerVisibility != 'archived') || !archivedPresent">
           <div>HIDE<br>REFERENCE</div>
         </ion-button>
       </ion-col>
