--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -47,12 +47,19 @@
         </ion-button>
       </ion-col>  
     </ion-row>
+    <!--
     <ion-row>
       <ion-col size="4">
-        <ion-button class = 'bigButton' expand = 'block' (click)="triggerFileInput()">
-          <div class="pick" >UPLOAD<br>TRACK</div>
+        <ion-button class="bigButton" expand="block" (click)="triggerFileInput()">
+          <div class="pick">UPLOAD<br />TRACK</div>
         </ion-button>
-        <input type="file" #fileInput (change)="onFileSelected($event)" accept=".gpx" style="display:none;">
+        <input
+          type="file"
+          #fileInput
+          (change)="onFileSelected($event)"
+          accept=".gpx"
+          style="display: block"
+        />
       </ion-col>  
       <ion-col size="8">
         <div>
@@ -60,6 +67,7 @@
         </div>
       </ion-col>  
     </ion-row>
+    -->
   </ion-grid>
   
 </ion-content>
